@@ -75,8 +75,9 @@ extern void sourceToggleFindWordsOnlyCB     (Widget, XtPointer, XtPointer);
 extern void sourceToggleFindCaseSensitiveCB (Widget, XtPointer, XtPointer);
 extern void sourceToggleCacheSourceFilesCB  (Widget, XtPointer, XtPointer);
 extern void sourceToggleCacheMachineCodeCB  (Widget, XtPointer, XtPointer);
-extern void sourceToggleAllRegistersCB      (Widget, XtPointer, XtPointer);
 extern void sourceToggleDisplayLineNumbersCB(Widget, XtPointer, XtPointer);
+extern void sourceSetIntRegistersCB         (Widget, XtPointer, XtPointer);
+extern void sourceSetAllRegistersCB         (Widget, XtPointer, XtPointer);
 extern void sourceSetDisplayGlyphsCB        (Widget, XtPointer, XtPointer);
 extern void sourceSetUseSourcePathCB        (Widget, XtPointer, XtPointer);
 extern void sourceSetTabWidthCB             (Widget, XtPointer, XtPointer);
